ZOOKEEPER-2914: Clear or suppress Java 9 compiler warning messages